src/objects/Consult_Rooms__c.object
<CustomObject>
    <description>Table that has a row for each consult room in a center</description>
    <fields>
        <fullName>API_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if a consult rooms inventory is visible through the api (unconfirmed rooms are still invisible for now).</description>
        <label>API Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if a consult room is still active in the system.  Meridith requested the ability to remove rooms from the calendar on 9.24/2012</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Center_Information__c</fullName>
        <description>The center that a consult room exists in.</description>
        <label>Center Information</label>
        <referenceTo>Center_Information__c</referenceTo>
        <relationshipLabel>Consult Rooms</relationshipLabel>
        <relationshipName>Consult_Rooms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Days_Built_Out__c</fullName>
        <defaultValue>180</defaultValue>
        <description>This controls the number of days the consult room inventory will be built out. On a manual room type, this can be used to build an inventory at a given point in time.</description>
        <label>Days Built Out</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Infocision_SF_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Field used to track whether Infocision SF agents should have visibility to blocks in this room</description>
        <label>Infocision SF Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Room_Type__c</fullName>
        <description>Type of consult room</description>
        <label>Room Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                    <default>true</default>
                    <label>Normal</label>
                </value>
                <value>
                    <fullName>OverFlow</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Unconfirmed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Schedule_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the scheduling template that the consult room follows.</description>
        <label>Schedule Template</label>
        <referenceTo>Schedule_Templates__c</referenceTo>
        <relationshipLabel>Consult Rooms</relationshipLabel>
        <relationshipName>Consult_Rooms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Controls the sort order display for consult rooms</description>
        <label>Sort Order</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Consult Room</label>
    <nameField>
        <label>Consult Rooms Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consult Rooms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>